# ShipSight

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  shipsight.ps1  shipsight.sh
dummy_project/: about.html  index.html
shipsight/: __init__.py  artifacts.py  cli.py  config.py
shipsight/ai/: intelligence.py  narrative.py
shipsight/capture/: capture.py  carbon.py  crawler.py
shipsight/engine/: discovery.py  orchestrator.py  readiness.py
shipsight_output_flutter(static)/: README.generated.md  linkedin.post.md  metadata.json
shipsight_output_node/: README.generated.md  linkedin.post.md  metadata.json
shipsight_output_node_next/: README.generated.md  linkedin.post.md  metadata.json
tests/: test_discovery.py
